@@ -3,8 +3,8 @@
 
   rbgobject.h -
 
-  $Author: sakai $
-  $Date: 2003/04/12 13:14:16 $
+  $Author: mutoh $
+  $Date: 2003/05/18 17:03:35 $
 
   Copyright (C) 2002,2003  Masahiro Sakai
 
@@ -103,6 +103,7 @@ extern void rbgobj_register_class(VALUE klass,
 extern VALUE rbgobj_cType;
 extern VALUE rbgobj_gtype_new(GType gtype);
 extern GType rbgobj_gtype_get(VALUE obj);
+extern gboolean rbgobj_exist_class(GType gtype);
 
 /* rbgobj_signal.c */
 typedef VALUE (*GValToRValSignalFunc)(guint num,const GValue* values);
